# uptime_monitor

./: Cargo.toml  Dockerfile  backup.sh  build_for_centos.sh  build_for_everybody.sh  centos10_install.sh  connect_to_container_centos.sh  copy_to_centos.sh  encode_srv.sh  extract_binary_centos.sh  install_toolchain.sh  load_test.sh  local_run.sh  run.sh  server.txt  users.csv
.github/workflows/: release.yml  rust.yml
src/: main.rs
