[package]
name = "uptime_monitor"
version = "0.1.0"
edition = "2024"


[dependencies]
# HTTPS-capable, simple blocking client with JSON
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = true, features = ["clock"] }
polars = { version = "0.51", features = ["csv"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22.1"
regex = "1.12.2"



